# WiFiUtilsForPython

./: .isort.cfg  LICENSE  README.md  pyproject.toml
example/: mac_addr.py  ssid.py
tests/mac_addr/: test_check_mac_addr.py  test_create_mac_addr.py
tests/ssid/: test_check_passphrase.py  test_check_passphrase_ex.py  test_check_ssid.py  test_create_passphrase.py  test_create_passphrase_ex.py
wifi_utils/: mac_addr.py  ssid.py
