[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "wifi_utils"
version = "0.0.1"
authors = [
  { name="Taogya", email="132679709+taogya@users.noreply.github.com" },
]
description = "This is Wi-Fi Utilities for Python on Linux."
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: BSD License",
    "Operating System :: POSIX :: Linux",
]

[tool.hatch.build]
exclude = [
    "build",
    "example",
    "tests"
]

[project.urls]
"Homepage" = "https://github.com/taogya/WiFiUtilsForPython"
"Bug Tracker" = "https://github.com/taogya/WiFiUtilsForPython/issues"